--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -38,9 +38,9 @@
                                         {% elseif is_granted('ROLE_USER') %}
                                         <li> <a class="dropdown-item" href="#">Mon Profil</a></li>
                                     </ul>
-ggfff                                </div>
+                                </div>
                                 {% endif %}
-f
+
                             {% else %} <!-- ANONYMOUS USER-->
                                 <!-- Signin btn -->
                                 <div class="dorne-signin-btn ml-auto">
