--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -18,12 +18,6 @@
                     </div>
                     <!-- Hero Search Form -->
                     <div class="hero-search-form">
-                        <!-- Tabs -->
-                        <div class="nav nav-tabs" id="heroTab" role="tablist">
-                            {#                           role="tab" aria-controls="nav-places" aria-selected="true">Sites</a>#}
-                            {#                            <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events"#}
-                            {#                               role="tab" aria-controls="nav-events" aria-selected="false">Events</a>#}
-                        </div>
                         <!-- Tabs Content -->
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show active" id="nav-places" role="tabpanel"
@@ -75,7 +69,7 @@
                                     <div class="single-category-area wow fadeInUpBig" data-wow-delay="0.2s">
                                         <div class="category-content">
                                             <a href="{{ path('default_category', {alias : category.alias}) }}">
-                                                <img src="{{ asset('img/core-img/' ~ category.icon) }}"
+                                                <img class="img-icon" src="{{ asset('img/core-img/' ~ category.icon) }}"
                                                      alt="{{ category.name }}">
                                                 <h6>{{ category.name }}</h6>
                                             </a>
@@ -129,13 +123,13 @@
                 <div class="col-12 col-lg-6">
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.2s">
                             {% for course in courses %}
-                                {% if course.visits.1.site.id == 1 %}
+                                {% if course.id == 2 %}
                                     <img class="img-course1"
-                                         src="{{ asset('img/sites-img/' ~ course.visits.1.site.image) }}" alt="{{ course.name }}">
+                                         src="{{ asset('img/sites-img/' ~ course.visits.0.site.image) }}" alt="{{ course.name }}">
 
                                     <div class="editors-pick-info">
                                         <div class="places-total-destinations d-flex">
-                                            <a href="#">{{course.visits.1.site.category.name}}</a>
+                                            <a href="#">{{course.visits.0.site.category.name}}</a>
                                             <a href="#">{{course.name | upper}}</a>
                                         </div>
                                         <div class="add-more">
@@ -151,12 +145,12 @@
                 <div class="col-12 col-lg-6">
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.4s">
                         {% for course in courses %}
-                            {% if course.visits.1.site.id == 2 %}
+                            {% if course.id == 3 %}
                                 <img class="img-course"
                                      src="{{ asset('img/sites-img/' ~ course.visits.0.site.image) }}" alt="{{ course.name }}">
                                 <div class="editors-pick-info">
                                     <div class="places-total-destinations d-flex">
-                                        <a href="#">{{course.visits.1.site.category.name}}</a>
+                                        <a href="#">{{course.visits.0.site.category.name}}</a>
                                         <a href="#">{{course.name | upper}}</a>
                                     </div>
                                     <div class="add-more">
@@ -170,7 +164,7 @@
                     </div>
                     <div class="single-editors-pick-area wow fadeInUp" data-wow-delay="0.6s">
                         {% for course in courses %}
-                            {% if course.visits.1.site.id == 3 %}
+                            {% if course.id == 4 %}
                             <img class="img-course"
                                  src="{{ asset('img/sites-img/' ~ course.visits.1.site.image) }}" alt="{{ course.name }}">
                             <div class="editors-pick-info">
