--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -5,8 +5,9 @@
             <div class="col-12 d-md-flex align-items-center justify-content-between">
                 <div class="col-9" id="contactB">
                     <a class="navbar-brand" href="{{ path('/') }}"><img src="{{ asset('img/core-img/logo_dark.png') }} " alt="logo.png"></a>
-                    <p>Visiter autrement, Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>Ab ad consequuntur doloremque doloribus eveniet.</p>
-
+                    <p>Visiter autrement, A pied… en voiture… en ville ou dans des contrées lointaines
+                        Un parcours à thème pour vous aiguiller dans votre déambulation !
+                        Cher DMIste, en piste !.</p>
                 </div>
 
                 <div class="col-3 footer-social-btns">
