--- a/templates/default/concept.html.twig
+++ b/templates/default/concept.html.twig
@@ -34,8 +34,10 @@
         <div class="container h-100">
             <div class="d-flex text-center h-100">
                 <div class="my-auto w-100 text-white">
-                    <h1 class="display-3 text-white">Video Header</h1>
-                    <h2>With HTML5 Video and Bootstrap 4</h2>
+                    <h1 class="display-3 text-white">DISCOVERMYISLAND</h1>
+                    <h2>A pied… en voiture… en ville ou dans des contrées lointaines
+                        Un parcours à thème pour vous aiguiller dans votre déambulation !
+                        Cher DMIste, en piste ! 4</h2>
                 </div>
             </div>
         </div>
