--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -114,7 +114,9 @@
                     <div class="section-heading text-center">
                         <span></span>
                         <h4>Nos parcours</h4>
-                        <p>Les plus populaires</p>
+                        <p>A pied… en voiture… en ville ou dans des contrées lointaines
+                            Un parcours à thème pour vous aiguiller dans votre déambulation !
+                            Cher DMIste, en piste !</p>
                     </div>
                 </div>
             </div>
