--- a/templates/default/explore.html.twig
+++ b/templates/default/explore.html.twig
@@ -40,10 +40,11 @@
                         type: 'Feature',
                         geometry: {
                             type: 'Point',
-                            coordinates: [{{ site.long }}, {{ site.lat }}]
+                            coordinates: ['{{ site.long }}, {{ site.lat }}']
                         },
                         properties: {
-                            title: '{{ site.name }}'
+                            title: "{{ site.name }}"
+
                         }
                     },
                 {% endfor %}
@@ -89,12 +90,6 @@
             <!-- Explore Search Form -->
             <div class="explore-search-form">
                 <h6>Que recherchez-vous?</h6>
-                <!-- Tabs -->
-                {#                    <div class="nav nav-tabs" id="heroTab" role="tablist">#}
-                {#                        <a class="nav-item nav-link active" id="nav-places-tab" data-toggle="tab" href="#nav-places" role="tab" aria-controls="nav-places" aria-selected="true">Sites</a>#}
-                {#                        <a class="nav-item nav-link" id="nav-events-tab" data-toggle="tab" href="#nav-events" role="tab" aria-controls="nav-events" aria-selected="false">Events</a>#}
-                {#                    </div>#}
-                <!-- Tabs Content -->
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-places" role="tabpanel"
                          aria-labelledby="nav-places-tab">
