--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -6,8 +6,7 @@
                 <div class="col-9" id="contactB">
                     <a class="navbar-brand" href="{{ path('/') }}"><img src="{{ asset('img/core-img/logo_dark.png') }} " alt="logo.png"></a>
                     <p>Visiter autrement, A pied… en voiture… en ville ou dans des contrées lointaines
-                        Un parcours à thème pour vous aiguiller dans votre déambulation !
-                        Cher DMIste, en piste !.</p>
+                        Un parcours à thème pour vous aiguiller dans votre déambulation! Cher DMIste, en piste!</p>
                 </div>
 
                 <div class="col-3 footer-social-btns">
