--- a/templates/default/single-site.html.twig
+++ b/templates/default/single-site.html.twig
@@ -5,147 +5,78 @@
 {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
-    <!-- MAPBOX Stylesheet -->
-    <link href='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.css' rel='stylesheet' />
     <!-- Dropify -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/css/dropify.min.css"
           integrity="sha256-AWdeVMUYtwLH09F6ZHxNgvJI37p+te8hJuSMo44NVm0=" crossorigin="anonymous" />
+    <!-- MAPBOX Stylesheet -->
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.css" rel="stylesheet"/>
     <style>
         .custom-file-label{display:none;}
+        .marker {
+            background-image: url({{ asset('img/core-img/mapbox-icon.png') }});
+            background-size: cover;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+        .mapboxgl-popup {
+            max-width: 200px;
+        }
 
-         #menuMap {
-
-             top: 0;
-             background: #fff;
-             padding: 10px;
-         }
+        .mapboxgl-popup-content {
+            text-align: center;
+            font-family: 'Open Sans', sans-serif;
+        }
 
     </style>
 {% endblock %}
+
 {% block javascripts %}
     {{ parent() }}
     <!-- Mapbox-->
-    <script src='https://api.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.js"></script>
     <script>
+        var geojson = {
+            type: 'Feature',
+            features: [
+                {% if site is not null %}
+                {
+                    type: 'Feature',
+                    geometry: {
+                        type: 'Point',
+                        coordinates: [{{ site.long }}, {{ site.lat }}]
+                    },
+                    properties: {
+                        title: "{{ site.name }}"
+                    }
+                },
+                {% endif %}
+            ]
+        };
+
         mapboxgl.accessToken = 'pk.eyJ1IjoiY2hhYmluZXZpYnoiLCJhIjoiY2szenk4enAxMjAxaDNscWx5MjFtYTE4ZyJ9.2mxGbAQIffpHKpGUphvYVA';
         var map = new mapboxgl.Map({
             container: 'locationMap',
-            zoom: 1.5,
-            style: 'mapbox://styles/mapbox/streets-v11'
-        });
-        /***
-         * change style map
-         * ****/
-        var layerList = document.getElementById('menuMap');
-        var inputs = layerList.getElementsByTagName('input');
-
-        function switchLayer(layer) {
-            var layerId = layer.target.id;
-            map.setStyle('mapbox://styles/mapbox/' + layerId);
-        }
-
-        for (var i = 0; i < inputs.length; i++) {
-            inputs[i].onclick = switchLayer;
-        }
-/***
- * Add animate marker
- * ****/
-        var size = 100;
-
-        var pulsingDot = {
-            width: size,
-            height: size,
-            data: new Uint8Array(size * size * 4),
-
-// get rendering context for the map canvas when layer is added to the map
-            onAdd: function() {
-                var canvas = document.createElement('canvas');
-                canvas.width = this.width;
-                canvas.height = this.height;
-                this.context = canvas.getContext('2d');
-            },
-
-// called once before every frame where the icon will be used
-            render: function() {
-                var duration = 1000;
-                var t = (performance.now() % duration) / duration;
-
-                var radius = (size / 2) * 0.3;
-                var outerRadius = (size / 2) * 0.7 * t + radius;
-                var context = this.context;
-
-// draw outer circle
-                context.clearRect(0, 0, this.width, this.height);
-                context.beginPath();
-                context.arc(
-                    this.width / 2,
-                    this.height / 2,
-                    outerRadius,
-                    0,
-                    Math.PI * 2
-                );
-                context.fillStyle = 'rgba(255, 200, 200,' + (1 - t) + ')';
-                context.fill();
-
-// draw inner circle
-                context.beginPath();
-                context.arc(
-                    this.width / 2,
-                    this.height / 2,
-                    radius,
-                    0,
-                    Math.PI * 2
-                );
-                context.fillStyle = 'rgba(255, 100, 100, 1)';
-                context.strokeStyle = 'white';
-                context.lineWidth = 2 + 4 * (1 - t);
-                context.fill();
-                context.stroke();
-
-// update this image's data with data from the canvas
-                this.data = context.getImageData(
-                    0,
-                    0,
-                    this.width,
-                    this.height
-                ).data;
-
-// continuously repaint the map, resulting in the smooth animation of the dot
-                map.triggerRepaint();
-
-// return `true` to let the map know that the image was updated
-                return true;
-            }
-        };
-
-        map.on('load', function() {
-            map.addImage('pulsing-dot', pulsingDot, { pixelRatio: 2 });
-
-            map.addLayer({
-                'id': 'points',
-                'type': 'symbol',
-                'source': {
-                    'type': 'geojson',
-                    'data': {
-                        'type': 'FeatureCollection',
-                        'features': [
-                            {
-                                'type': 'Feature',
-                                'geometry': {
-                                    'type': 'Point',
-                                    'coordinates': [-61.551,16.265 ],
-                                    'zoom': 0.3
-                                }
-                            }
-                        ]
-                    }
-                },
-                'layout': {
-                    'icon-image': 'pulsing-dot'
-                }
-            });
+            style: 'mapbox://styles/mapbox/streets-v11',
+            center: [{{ site.long }}, {{ site.lat }}], // starting position [lng, lat]
+            zoom: 15// starting zoom
         });
 
+        // add markers to map
+        geojson.features.forEach(function (marker) {
+
+            // create a HTML element for each feature
+            var el = document.createElement('div');
+            el.className = 'marker';
+
+            // make a marker for each feature and add to the map
+            new mapboxgl.Marker(el)
+                .setLngLat(marker.geometry.coordinates)
+                .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
+                    .setHTML('<h6>' + marker.properties.title + '</h6>'))
+                .addTo(map);
+        });
     </script>
 
     <!-- Dropify -->
