--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,9 +49,9 @@ p {
     line-height: 1.5;
     font-weight: 400;
 }
-.section-padding-30 {
-    padding-top: 30px;
-    padding-bottom: 30px;
+.section-padding-50 {
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 .section-padding-150 {
     padding-top: 150px;
@@ -103,12 +103,21 @@ img {
     height: 50px !important;
     object-fit: cover !important;
 }
+
+.img-avatar {
+
+    max-width: 100% !important;
+    height: 150px !important;
+    object-fit: cover !important;
+}
 #avatarNav {
     max-width: 100% !important;
     height: 60px !important;
     object-fit: cover !important;
     border-radius: 50%;
     margin-right: 10px;
+    border-color: white;
+    border:5px;
 }
 .mt-15 {
     margin-top: 15px;
@@ -219,6 +228,9 @@ li {
     height: 800px!important;
 }
 
+.text-dmi{
+    color: #FF9900;
+}
 .dorne-table {
     display: table;
     height: 100%;
@@ -237,7 +249,7 @@ li {
 .section-heading {
     position: relative;
     z-index: 1;
-    margin-bottom: 150px;
+    margin-bottom: 90px;
 }
 
 .section-heading span {
@@ -325,7 +337,7 @@ li {
 
 .dorne-btn {
     min-width: 123px;
-    height: 50px;
+
     background-color: #FF9900;
     border-radius: 0;
     padding: 0 15px;
@@ -450,6 +462,7 @@ li {
 }
 
 .sticky .header_area {
+    width: 100%;
     background-color: rgba(14, 2, 35, 0.9);
     height: 115px;
     z-index: 9999;
@@ -467,14 +480,16 @@ li {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 16px;
-    padding-left: 16px;
+    width: 100%;
+    padding-right: 18px;
+    padding-left: 18px;
     color: #fff;
     font-size: 18px;
 
 
 }
 .navbar-expand-lg .navbar-nav .nav-link {
+    width: 100%;
     padding-right: 30px;
     padding-left: 30px;
     font-size: 18px;
@@ -499,8 +514,6 @@ li {
 
 .dropdown-menu {
     border: none;
-
-
 }
 
 
@@ -637,8 +650,10 @@ li {
     display: block;
     margin-top: 30px;
 }
-
-/* Catagory Area CSS */
+.hero-social-btn .social-btns > a:hover{
+    color: #cc6908;
+}
+/* Category Area CSS */
 
 .dorne-category-area {
     position: relative;
@@ -730,13 +745,12 @@ li {
  }
 .img-course1{
     max-width: 100% !important;
-    height: 540px !important;
+    height: 600px !important;
     object-fit: cover !important;
 }
 .img-course{
-    min-width: 470px !important;
     max-width: 100% !important;
-    height: 260px !important;
+    height: 290px !important;
     object-fit: cover !important;
 }
 .editors-pick-info {
@@ -967,7 +981,6 @@ li {
     padding: 15px 0 0 0;
     border-top: 1px solid #cc6908;
 
-
 }
 
 .footer-text p {
@@ -977,12 +990,11 @@ li {
     margin-bottom: 0;
     color:white;
 
-
 }
 
 .footer-social-btns > a {
     display: inline-block;
-    color: #464646;
+    color: #111111;
     padding: 0 15px;
     font-size: 18px;
 }
@@ -1290,7 +1302,6 @@ li {
     font-size: 18px;
 }
 
-
 .listing-title {
     margin-bottom: 30px;
 }
@@ -1427,7 +1438,7 @@ li {
 #videoDmi {
     position: relative;
     background-color: black;
-    height: 75vh;
+    height: 65vh;
     min-height: 25rem;
     width: 100%;
     overflow: hidden;
@@ -1435,8 +1446,7 @@ li {
 
 #videoDmi video {
     position: absolute;
-    top: 50%;
-    left: 50%;
+
     min-width: 100%;
     min-height: 100%;
     width: auto;
