--- a/templates/components/_nav.html.twig
+++ b/templates/components/_nav.html.twig
@@ -7,8 +7,8 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#dorneNav" aria-controls="dorneNav" aria-expanded="false" aria-label="Toggle navigation"><span class="fa fa-bars"></span></button>
                     <!-- Nav -->
                     <div class="collapse navbar-collapse" id="dorneNav">
-                        <ul class="navbar-nav mx-auto" id="dorneMenu">
-                            <li class="nav-item active">
+                        <ul class="navbar-nav mx-auto text-uppercase " id="dorneMenu">
+                            <li class="nav-item ">
                                 <a class="nav-link" href="{{ path('/') }}">Accueil</a>
                             </li>
                             <li class="nav-item ">
@@ -26,10 +26,10 @@
 
                             <!-- LogIn LogOut Register-->
                             {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-                                <span class="text-white"> Bonjour {{ app.user.pseudo}}  </span>
+                                <span class="text-white"> Bienvenue {{ app.user.pseudo}}  </span>
                                 <div class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle"  href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        <img id="avatarNav" class="rounded-circle" src="{{ asset('img/clients-img/avatar/' ~ app.user.avatar) }}" alt="{{app.user.pseudo}}">
+                                        <img id="avatarNav" class="rounded-circle border border-white" src="{{ asset('img/clients-img/avatar/' ~ app.user.avatar) }}" alt="{{app.user.pseudo}}">
                                     </a>
                                     <ul class="dropdown-menu " aria-labelledby="navbarDropdown">
                                         <li><a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a></li>
