--- a/templates/default/concept.html.twig
+++ b/templates/default/concept.html.twig
@@ -60,7 +60,7 @@
             </div>
             <!-- Team 2-->
             <div class="col-6 text-center ">
-                <img class=" img-avatar rounded-circle" src="{{ asset('img/clients-img/avatar/avatarLena.png') }}" alt="astrid">
+                <img class=" img-avatar rounded-circle" src="{{ asset('img/clients-img/avatar/avatarLena.png') }}" alt="lena">
                 <ul class=" text-center mt-3">
                     <li><h3>Léna BOISSERON</h3></li>
                     <li><h6 class="text-dmi">Chef de projet fonctionnel, rédacteur, front-end</h6></li>
