--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,7 +9,7 @@
         <meta name="copyright" content="DGitalQueen">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% block title %}Discovery My Island | Visite Mon Ile {% endblock %}</title>
+        <title>{% block title %}Discover My Island | Visite Mon Ile {% endblock %}</title>
         <!-- Favicon -->
         <link rel="icon" href="{{ asset('img/core-img/favicon.ico') }}">
 
