--- a/templates/default/single-site.html.twig
+++ b/templates/default/single-site.html.twig
@@ -1,17 +1,20 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-  {{site.name}}
+    {{ site.name }}
 {% endblock %}
 {% block stylesheets %}
     {{ parent() }}
     <!-- Dropify -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/css/dropify.min.css"
-          integrity="sha256-AWdeVMUYtwLH09F6ZHxNgvJI37p+te8hJuSMo44NVm0=" crossorigin="anonymous" />
+          integrity="sha256-AWdeVMUYtwLH09F6ZHxNgvJI37p+te8hJuSMo44NVm0=" crossorigin="anonymous"/>
     <!-- MAPBOX Stylesheet -->
     <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v1.6.0/mapbox-gl.css" rel="stylesheet"/>
     <style>
-        .custom-file-label{display:none;}
+        .custom-file-label {
+            display: none;
+        }
+
         .marker {
             background-image: url({{ asset('img/core-img/mapbox-icon.png') }});
             background-size: cover;
@@ -20,6 +23,7 @@
             border-radius: 50%;
             cursor: pointer;
         }
+
         .mapboxgl-popup {
             max-width: 200px;
         }
@@ -73,21 +77,22 @@
             // make a marker for each feature and add to the map
             new mapboxgl.Marker(el)
                 .setLngLat(marker.geometry.coordinates)
-                .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
+                .setPopup(new mapboxgl.Popup({offset: 25}) // add popups
                     .setHTML('<h6>' + marker.properties.title + '</h6>'))
                 .addTo(map);
         });
     </script>
 
     <!-- Dropify -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/js/dropify.min.js" integrity="sha256-SUaao5Q7ifr2twwET0iyXVy0OVnuFJhGVi5E/dqEiLU=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Dropify/0.2.2/js/dropify.min.js"
+            integrity="sha256-SUaao5Q7ifr2twwET0iyXVy0OVnuFJhGVi5E/dqEiLU=" crossorigin="anonymous"></script>
     <script>
         $('.dropify').dropify({
             messages: {
                 default: 'Glissez-d&eacute;posez un fichier ici ou cliquez',
                 replace: 'Glissez-d&eacute;posez un fichier ou cliquez pour remplacer',
-                remove:  'Supprimer',
-                error:   'D&eacute;sol&eacute;, le fichier est trop volumineux'
+                remove: 'Supprimer',
+                error: 'D&eacute;sol&eacute;, le fichier est trop volumineux'
             }
         });
     </script>
@@ -97,13 +102,15 @@
 {% block content %}
 
     <!-- ***** Breadcumb Area Start ***** -->
-    <div class="breadcumb-area height-700 bg-img bg-overlay" style="background-image: url({{ asset('img/sites-img/' ~ site.image) }})">
+    <div class="breadcumb-area height-700 bg-img bg-overlay"
+         style="background-image: url({{ asset('img/sites-img/' ~ site.image) }})">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="breadcumb-content">
                         <div class="map-ratings-review-area d-flex">
-                            <a href="#" class="d-flex align-items-center justify-content-center"><img src="{{ asset('img/core-img/map.png') }}" alt="map"></a>
+                            <a href="#" class="d-flex align-items-center justify-content-center"><img
+                                        src="{{ asset('img/core-img/map.png') }}" alt="map"></a>
                             <a href="#">8.7</a>
                             <a href="#addreviews"> Ajouter un Commentaire</a>
                         </div>
@@ -123,8 +130,8 @@
                     <div class="single-listing-content">
 
                         <div class="listing-title">
-                            <h4>{{ site.name}}</h4>
-                            <h6>{{ site.address}}</h6>
+                            <h4>{{ site.name }}</h4>
+                            <h6>{{ site.address }}</h6>
                         </div>
 
                         <div class="single-listing-nav">
@@ -139,18 +146,18 @@
 
                         <div class="overview-content mt-50" id="overview">
                             <p>{{ site.content }}</p>
-                            <a href="{{site.siteWeb}}" class="btn btn-block dorne-btn mt-3"> En savoir plus</a>
+                            <a href="{{ site.siteWeb }}" class="btn btn-block dorne-btn mt-3"> En savoir plus</a>
 
                             <div class="listing-menu-area mt-100" id="menu">
                                 {% if site.visiteType is not empty %}
                                     <h5>Idées de visites</h5><p>
-                                        {{ site.visiteType | striptags }}
-                                    </p>
+                                    {{ site.visiteType | striptags }}
+                                </p>
                                 {% endif %}
                             </div>
                         </div>
 
-                <div class="listing-reviews-area mt-100" id="review">
+                        <div class="listing-reviews-area mt-100" id="review">
                             <h4>commentaires</h4>
                             {% for message in app.flashes('notice') %}
                                 <div class="alert alert-success">
@@ -159,31 +166,34 @@
                             {% endfor %}
                             {% if comments is not empty %}
                                 {% for comment in comments %}
-                                <div class=" row single-review-area col-12">
-                                    <div class="col-8">
-                                        <div class="reviewer-meta d-flex align-items-center ">
+                                    <div class=" row single-review-area col-12">
+                                        <div class="col-8">
+                                            <div class="reviewer-meta d-flex align-items-center ">
 
-                                            <img src="{{ asset('img/clients-img/avatar/' ~ comment.user.avatar) }}" alt="{{comment.user.pseudo}}">
-                                            <div class="reviewer-content">
-                                                <div class="review-title-ratings d-flex justify-content-between">
-                                                    <h5>“{{comment.title}}”</h5>
-                                                </div>
-                                                <div class="">
-                                                    <p>{{ comment.content | striptags }}</p>
+                                                <img src="{{ asset('img/clients-img/avatar/' ~ comment.user.avatar) }}"
+                                                     alt="{{ comment.user.pseudo }}">
+                                                <div class="reviewer-content">
+                                                    <div class="review-title-ratings d-flex justify-content-between">
+                                                        <h5>“{{ comment.title }}”</h5>
+                                                    </div>
+                                                    <div class="">
+                                                        <p>{{ comment.content | striptags }}</p>
+                                                    </div>
                                                 </div>
                                             </div>
+                                            <div class="reviewer-name">
+                                                <h6>{{ comment.user.pseudo }}</h6>
+                                                <p>{{ comment.createdDate| date('Y-F-d') }}</p>
+                                            </div>
+                                        </div> <!-- fin div col-8-->
+                                        <div class="col-4 ">
+                                            {% if comment.image  is defined %}
+                                                <img class="rounded-circle" width="320" height="250"
+                                                     src="{{ asset('img/com-img/' ~ comment.image) }}"
+                                                     alt="{{ comment.image }}">
+                                            {% endif %}
                                         </div>
-                                        <div class="reviewer-name">
-                                            <h6>{{comment.user.pseudo}}</h6>
-                                            <p>{{comment.createdDate| date('Y-F-d')}}</p>
-                                        </div>
-                                    </div> <!-- fin div col-8-->
-                                    <div class="col-4 ">
-                                        {% if comment.image  is defined %}
-                                            <img class="rounded-circle" width="320" height="250" src="{{ asset('img/com-img/' ~ comment.image) }}" alt="{{ comment.image }}">
-                                        {% endif %}
                                     </div>
-                                </div>
                                 {% endfor %}
                             {% else %}
                                 <div class="col alert alert-warning text-center">
@@ -209,27 +219,27 @@
                         <!-- Contact  -->
                         <div class="contact-form contact-form-widget mt-50">
                             <h6>Contact</h6>
-                                <div class="row">
-                                    <div class="col-12">
-                                        {{site.name}}
-                                    </div>
-                                    <div class="col-12">
-                                        {{site.address | striptags}}
-                                    </div>
-                                    <div class="col-12">
-                                       {{site.tel}}
-                                    </div>
-                                    <div class="col-12">
-                                        {{site.siteWeb}}
-                                    </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    {{ site.name }}
                                 </div>
+                                <div class="col-12">
+                                    {{ site.address | striptags }}
+                                </div>
+                                <div class="col-12">
+                                    {{ site.tel }}
+                                </div>
+                                <div class="col-12">
+                                    {{ site.siteWeb }}
+                                </div>
+                            </div>
                         </div> <!-- END Contact  -->
 
                         <!-- Opening Hours Widget -->
                         <div class="opening-hours-widget mt-50">
                             <h6>Horaires d'ouvertures</h6>
                             <div class="opening-hours">
-                                <div> {{ site.openHour | striptags}}</div>
+                                <div> {{ site.openHour | striptags }}</div>
                             </div>
                         </div>
 
@@ -238,13 +248,13 @@
                             <h6>Parcours conseillés</h6>
                             <ul class="row">
                                 {% for course in courses %}
-                                <li class="col-12">
-                                    <div class="add-more">
-                                        <a href="{{ path('default_course', {
-                                            alias : course.alias}
-                                        )}}">{{course.name}}</a>
-                                    </div>
-                                </li>
+                                    <li class="col-12">
+                                        <div class="add-more">
+                                            <a href="{{ path('default_course', {
+                                                alias : course.alias}
+                                            ) }}">{{ course.name }}</a>
+                                        </div>
+                                    </li>
                                 {% endfor %}
                             </ul>
                         </div>
@@ -256,8 +266,13 @@
                                 Ajouter un Commentaire
                             </h3>
                             <div class=" mt-4 ">
-
-                                {{ form(form) }}
+                                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                                    {{ form(form) }}
+                                {% else %}
+                                    <div class="alert alert-info">
+                                        Connectez-vous pour laisser un commentaire.
+                                    </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -267,6 +282,6 @@
     </section>
     <!-- ***** Single Listing Area End ***** -->
 
-    
+
 {% endblock %}
    
