maj single site

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -235,7 +235,7 @@
                                 <img class="img-dmi" src="{{ asset('img/sites-img/' ~ site.image) }}" alt="{{ site.name }}">
                                 <!-- Rating & Map -->
                                 <div class="ratings-map-area d-flex">
-                                    <a href="#">{{site.category.alias}}</a>
+                                    <a href="#">{{site.category.name}}</a>
                                     <a href="#"><img src="{{ asset('img/core-img/map.png') }}" alt=""></a>
                                 </div>
                                 <div class="feature-content d-flex align-items-center justify-content-between">
