--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -280,4 +280,33 @@
         </div>
     </div>
     <!-- ***** Clients Area End ***** -->
+
+    <!-- ***** Video Area End ***** -->
+    <section class="dorne-editors-pick-area bg-img bg-overlay-9 section-padding-100" style="background-image: url({{ asset('img/bg-img/hero-2.jpg') }});">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="section-heading text-center">
+                        <span></span>
+                        <h4>Vidéos</h4>
+                        <p>Quelques vidéos de nos Dmistes!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+
+                    <div class="col-6">
+                        <h3>Bois David</h3>
+                        <iframe width="400" height="315" src="https://www.youtube.com/embed/a3qzy_-IDcw?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="col-6">
+                        <h3>Mémorial Acte</h3>
+                        <iframe width="400" height="315" src="https://www.youtube.com/embed/khSc-l4it1g?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+
+            </div>
+
+        </div>
+    </section>
+    <!-- ***** Video Area End ***** -->
 {% endblock %}
