--- a/templates/default/concept.html.twig
+++ b/templates/default/concept.html.twig
@@ -11,10 +11,11 @@
 
 
     <!--Video Section-->
-    <section id="videoDmi">
-        <video  autoplay="autoplay" loop="loop">
-            <iframe width="1200" height="600" src="https://www.youtube.com/embed/a3qzy_-IDcw?controls=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </video>
+<section id="videoDmi" class="dorne-welcome-area bg-img bg-overlay"
+         style="background-image: url( {{ asset('img/bg-img/hero-1.jpg') }});">
+
+    
+
         <div class="container h-100">
             <div class="d-flex text-center h-100">
                 <div class="my-auto w-100 text-white">
